--- a/src/style.css
+++ b/src/style.css
@@ -37,10 +37,10 @@
 }
 
 @-webkit-keyframes animation-19gglwu {
-    0% {
-      left: -200%;
-      right: 100%;
-    }
+  0% {
+    left: -200%;
+    right: 100%;
+  }
 
     60% {
       left: 107%;
@@ -137,4 +137,16 @@
   color: #664d03;
   background-color: #fff3cd;
   border-color: #ffecb5;
+}
+
+.buttonPanel {
+  color: red;
+  font-size: 50px;
+  display: flex;
+  justify-content: center;
+  width: fit-content;
+}
+#left-arrow,
+#right-arrow {
+  cursor: pointer;
 }
