--- a/src/style.css
+++ b/src/style.css
@@ -139,3 +139,55 @@
   background-color: #fff3cd;
   border-color: #ffecb5;
 }
+
+/* Markers */
+
+.greenstand-point-selected {
+  z-index: 9999 !important;
+}
+.greenstand-point-highlight,
+.greenstand-cluster-highlight {
+  z-index: 999 !important;
+}
+
+.greenstand-point-selected-box {
+  background: url(./images/pin_32px_highlight.png);
+  width: 29px;
+  height: 32px;
+}
+
+.greenstand-point-highlight-box {
+  background: url(./images/pin_29px_highlight.png);
+  width: 29px;
+  height: 32px;
+}
+
+.greenstand-cluster-highlight {
+  margin-left: 0px !important;
+  margin-top: 0px !important;
+}
+
+.greenstand-cluster-highlight-box {
+  background: url(./images/cluster_63px_highlight.png);
+  width: 63px;
+  height: 63px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: translate(-50%, -50%);
+  font-family: Roboto, Arial, sans-serif;
+  font-size: 14px;
+}
+
+.greenstand-cluster-highlight-box.small {
+  background: url(./images/cluster_46px_highlight.png);
+  width: 46px;
+  height: 46px;
+  position: relative;
+  top: -5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Roboto, Arial, sans-serif;
+  font-size: 14px;
+}
