feat: update highlighted and selected tree icons

--- a/src/style.css
+++ b/src/style.css
@@ -151,15 +151,21 @@
 }
 
 .greenstand-point-selected-box {
-  background: url(./images/pin_32px_highlight.png);
-  width: 29px;
-  height: 32px;
+  background: url(./images/tree-selected.svg);
+  background-size: contain;
+  position: relative;
+  top: -4px;
+  width: 32px;
+  height: 35.76px;
 }
 
 .greenstand-point-highlight-box {
-  background: url(./images/pin_29px_highlight.png);
-  width: 29px;
-  height: 32px;
+  background: url(./images/tree-highlighted.svg);
+  background-size: contain;
+  position: relative;
+  top: -4px;
+  width: 32px;
+  height: 35.76px;
 }
 
 .greenstand-cluster-highlight {
@@ -168,9 +174,12 @@
 }
 
 .greenstand-cluster-highlight-box {
-  background: url(./images/cluster_63px_highlight.png);
-  width: 63px;
+  background: url(./images/cluster-highlighted.svg) no-repeat;
+  background-size: contain;
+  width: 48px;
   height: 63px;
+  position: relative;
+  top: 1px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -180,11 +189,12 @@
 }
 
 .greenstand-cluster-highlight-box.small {
-  background: url(./images/cluster_46px_highlight.png);
-  width: 46px;
-  height: 46px;
+  background: url(./images/cluster-highlighted.svg) no-repeat;
+  background-size: contain;
+  width: 48px;
+  height: 63px;
   position: relative;
-  top: -5px;
+  top: 1px;
   display: flex;
   justify-content: center;
   align-items: center;
