fix: restore deleted css styles for old icons

--- a/src/style.css
+++ b/src/style.css
@@ -151,21 +151,15 @@
 }
 
 .greenstand-point-selected-box {
-  background: url(./images/tree-selected.svg);
-  background-size: contain;
-  position: relative;
-  top: -4px;
-  width: 32px;
-  height: 35.76px;
+  background: url(./images/pin_32px_highlight.png);
+  width: 29px;
+  height: 32px;
 }
 
 .greenstand-point-highlight-box {
-  background: url(./images/tree-highlighted.svg);
-  background-size: contain;
-  position: relative;
-  top: -4px;
-  width: 32px;
-  height: 35.76px;
+  background: url(./images/pin_29px_highlight.png);
+  width: 29px;
+  height: 32px;
 }
 
 .greenstand-cluster-highlight {
@@ -174,12 +168,9 @@
 }
 
 .greenstand-cluster-highlight-box {
-  background: url(./images/cluster-highlighted.svg) no-repeat;
-  background-size: contain;
-  width: 48px;
+  background: url(./images/cluster_63px_highlight.png);
+  width: 63px;
   height: 63px;
-  position: relative;
-  top: 1px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -189,15 +180,51 @@
 }
 
 .greenstand-cluster-highlight-box.small {
-  background: url(./images/cluster-highlighted.svg) no-repeat;
-  background-size: contain;
-  width: 48px;
-  height: 63px;
+  background: url(./images/cluster_46px_highlight.png);
+  width: 46px;
+  height: 46px;
   position: relative;
-  top: 1px;
+  top: -5px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-family: Roboto, Arial, sans-serif;
   font-size: 14px;
+}
+
+/* Markers - Green(new) */
+.greenstand-point-selected-box.green {
+  background: url(./images/tree-selected-green.svg);
+  background-size: contain;
+  position: relative;
+  top: -4px;
+  width: 32px;
+  height: 35.76px;
+}
+
+.greenstand-point-highlight-box.green {
+  background: url(./images/tree-highlighted-green.svg);
+  background-size: contain;
+  position: relative;
+  top: -4px;
+  width: 32px;
+  height: 35.76px;
+}
+
+.greenstand-cluster-highlight-box.green {
+  background: url(./images/cluster-highlighted-green.svg) no-repeat;
+  background-size: contain;
+  width: 48px;
+  height: 63px;
+  position: relative;
+  top: 1px;
+}
+
+.greenstand-cluster-highlight-box.green.small {
+  background: url(./images/cluster-highlighted-green.svg) no-repeat;
+  background-size: contain;
+  width: 48px;
+  height: 63px;
+  position: relative;
+  top: 1px;
 }
