fix: add custom buttons

--- a/src/style.css
+++ b/src/style.css
@@ -141,10 +141,9 @@
 }
 
 .buttonPanel {
-  color: red;
-  font-size: 50px;
   display: flex;
   justify-content: center;
+  align-items: center;
   width: fit-content;
 }
 #left-arrow,
