fix: css problem with next button

--- a/src/style.css
+++ b/src/style.css
@@ -146,8 +146,8 @@
   align-items: center;
   width: fit-content;
 }
-#left-arrow,
-#right-arrow {
+#next-left-arrow,
+#next-right-arrow {
   cursor: pointer;
 }
 
