--- a/src/style.css
+++ b/src/style.css
@@ -150,6 +150,11 @@
 #next-right-arrow {
   cursor: pointer;
 }
+#next-left-arrow:hover svg,
+#next-right-arrow:hover svg {
+  filter: brightness(1.5);
+  transition: 0.2s;
+}
 
 /* Markers */
 
