--- a/src/style.css
+++ b/src/style.css
@@ -141,21 +141,18 @@
 }
 
 .buttonPanel {
-  width: 140px;
-  height: 90px;
+  width: 144px;
+  display: flex;
+  justify-content: space-between;
 }
 #next-left-arrow,
 #next-right-arrow {
-  margin: 5px;
-  flex: 40%;
-  height: 90px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 #next-left-arrow svg,
 #next-right-arrow svg {
-  height: 70px;
   background: rgba(0, 0, 0, 0.4);
   border-radius: 15%;
 }
