--- a/src/style.css
+++ b/src/style.css
@@ -258,20 +258,18 @@
   background: url(./images/tree-selected-green.svg) no-repeat;
   background-size: contain;
   position: relative;
-  top: 1px;
-  left: 5px;
-  width: 55px;
-  height: 63px;
+  top: 15px;
+  left: 24px;
+  transform: scale(1.4);
 }
 
 .greenstand-point-highlight-box.green-s {
   background: url(./images/tree-highlighted-green.svg) no-repeat;
   background-size: contain;
   position: relative;
-  top: 1px;
-  left: 5px;
-  width: 55px;
-  height: 63px;
+  top: 15px;
+  left: 24px;
+  transform: scale(1.4);
 }
 
 .greenstand-cluster-highlight-box.green-s {
